--- a/git/windowchef/file/.sxhkdrc.html
+++ b/git/windowchef/file/.sxhkdrc.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .sxhkdrc (922B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> .sxhkdrc (960B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -63,6 +63,9 @@
 <a href="#l45" id="l45">45</a>
 <a href="#l46" id="l46">46</a>
 <a href="#l47" id="l47">47</a>
+<a href="#l48" id="l48">48</a>
+<a href="#l49" id="l49">49</a>
+<a href="#l50" id="l50">50</a>
 </pre></td><td><pre>
 super + {h,j,k,l}
   ./waitron window_move {-20 0, 0 20, 0 -20, 20 0}
@@ -90,6 +93,9 @@ super + b
 
 super + v
   ./waitron window_ver_maximize
+
+super + m
+  ./waitron window_monocle
 
 alt + Tab
   ./waitron window_cycle
