--- a/git/windowchef/file/config.h.html
+++ b/git/windowchef/file/config.h.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> config.h (682B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> config.h (835B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -43,6 +43,12 @@
 <a href="#l25" id="l25">25</a>
 <a href="#l26" id="l26">26</a>
 <a href="#l27" id="l27">27</a>
+<a href="#l28" id="l28">28</a>
+<a href="#l29" id="l29">29</a>
+<a href="#l30" id="l30">30</a>
+<a href="#l31" id="l31">31</a>
+<a href="#l32" id="l32">32</a>
+<a href="#l33" id="l33">33</a>
 </pre></td><td><pre>
 /* See the LICENSE file for copyright and license details. */
 
@@ -69,6 +75,12 @@
 
 /* focus windows after hovering them with the pointer */
 #define SLOPPY_FOCUS true
+
+/* if true, new windows will be assigned to the last activated group */
+#define STICKY_WINDOWS false
+
+/* if true, paint borders */
+#define BORDERS true
 
 #endif
 </pre></td></tr></table>
