--- a/git/windowchef/file/windowchefrc.html
+++ b/git/windowchef/file/windowchefrc.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> windowchefrc (291B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> windowchefrc (372B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -25,6 +25,8 @@
 <a href="#l7" id="l7">7</a>
 <a href="#l8" id="l8">8</a>
 <a href="#l9" id="l9">9</a>
+<a href="#l10" id="l10">10</a>
+<a href="#l11" id="l11">11</a>
 </pre></td><td><pre>
 #!/bin/sh
 
@@ -35,6 +37,8 @@
 ./waitron wm_config cursor_position middle
 ./waitron wm_config groups_nr 4
 ./waitron wm_config enable_sloppy_focus true
+./waitron wm_config sticky_windows false
+./waitron wm_config enable_borders true
 </pre></td></tr></table>
 </div>
 </body>
