--- a/git/windowchef/refs.html
+++ b/git/windowchef/refs.html
@@ -19,13 +19,19 @@
 <tr><td>Name</td><td>Last commit date</td><td>Author</td>
 </tr>
 </thead><tbody>
-<tr><td>master</td><td>2016-10-07 17:43</td><td>Tudor Roman</td></tr>
+<tr><td>master</td><td>2017-01-01 13:30</td><td>Tudor Roman</td></tr>
 </tbody></table><br/><h2>Tags</h2><table id="tags"><thead>
 <tr><td>Name</td><td>Last commit date</td><td>Author</td>
 </tr>
 </thead><tbody>
 <tr><td>v0.1</td><td>2016-09-29 18:20</td><td>Tudor Roman</td></tr>
 <tr><td>v0.1.1</td><td>2016-09-29 18:41</td><td>Tudor Roman</td></tr>
+<tr><td>v0.2</td><td>2016-10-28 18:07</td><td>Tudor Roman</td></tr>
+<tr><td>v0.2.1</td><td>2016-11-10 17:38</td><td>Tudor Roman</td></tr>
+<tr><td>v0.2.2</td><td>2016-12-08 13:33</td><td>Tudor Roman</td></tr>
+<tr><td>v0.2.3</td><td>2016-12-09 11:56</td><td>Tudor Roman</td></tr>
+<tr><td>v0.2.4</td><td>2016-12-09 12:24</td><td>Tudor Roman</td></tr>
+<tr><td>v0.2.5</td><td>2016-12-16 17:36</td><td>Tudor Roman</td></tr>
 </tbody></table><br/></div>
 </body>
 </html>
