--- a/git/windowchef/file/LICENSE.html
+++ b/git/windowchef/file/LICENSE.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> LICENSE (763B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> LICENSE (764B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -35,9 +35,9 @@
 </pre></td><td><pre>
 ISC License
 
-Copyright (c) 2016, Tudor Roman &lt;tudurom@gmail.com&gt;
+Copyright (c) 2016 Tudor Ioan Roman &lt;tudurom@gmail.com&gt;
 
-Permission to use, copy, modify, and/or distribute this software for
+Permission to use, copy, modify, and distribute this software for
 any purpose with or without fee is hereby granted, provided that the
 above copyright notice and this permission notice appear in all
 copies.
