--- a/git/windowchef/file/config.mk.html
+++ b/git/windowchef/file/config.mk.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> config.mk (162B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> config.mk (163B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -27,7 +27,7 @@ PREFIX = /usr/local
 MANPREFIX = $(PREFIX)/share/man
 MANDIR = $(MANPREFIX)/man1
 
-CFLAGS += -std=c99 -Wextra -g
+CFLAGS += -std=c99 -Wextra -O2
 LDFLAGS += -lxcb -lxcb-ewmh -lxcb-icccm -lxcb-randr
 </pre></td></tr></table>
 </div>
