--- a/git/windowchef/file/man/waitron.1.html
+++ b/git/windowchef/file/man/waitron.1.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> waitron.1 (5619B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> waitron.1 (6398B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -201,11 +201,31 @@
 <a href="#l183" id="l183">183</a>
 <a href="#l184" id="l184">184</a>
 <a href="#l185" id="l185">185</a>
+<a href="#l186" id="l186">186</a>
+<a href="#l187" id="l187">187</a>
+<a href="#l188" id="l188">188</a>
+<a href="#l189" id="l189">189</a>
+<a href="#l190" id="l190">190</a>
+<a href="#l191" id="l191">191</a>
+<a href="#l192" id="l192">192</a>
+<a href="#l193" id="l193">193</a>
+<a href="#l194" id="l194">194</a>
+<a href="#l195" id="l195">195</a>
+<a href="#l196" id="l196">196</a>
+<a href="#l197" id="l197">197</a>
+<a href="#l198" id="l198">198</a>
+<a href="#l199" id="l199">199</a>
+<a href="#l200" id="l200">200</a>
+<a href="#l201" id="l201">201</a>
+<a href="#l202" id="l202">202</a>
+<a href="#l203" id="l203">203</a>
+<a href="#l204" id="l204">204</a>
+<a href="#l205" id="l205">205</a>
 </pre></td><td><pre>
 .\&quot; generated with Ronn/v0.7.3
 .\&quot; http://github.com/rtomayko/ronn/tree/0.7.3
 .
-.TH &quot;WAITRON&quot; &quot;1&quot; &quot;October 2016&quot; &quot;&quot; &quot;Windowchef Manual&quot;
+.TH &quot;WAITRON&quot; &quot;1&quot; &quot;December 2016&quot; &quot;&quot; &quot;Windowchef Manual&quot;
 .
 .SH &quot;NAME&quot;
 \fBwaitron\fR \- A client for windowchef(1)
@@ -234,10 +254,6 @@ true values: \fBtrue\fR | \fBt\fR | \fByes\fR | \fBy\fR | \fB1\fR
 .
 .IP
 false values: \fBfalse\fR | \fBf\fR | \fBno\fR | \fBn\fR | \fB0\fR
-.
-.TP
-\fBMOUSE\fR
-move | resize
 .
 .SH &quot;COMMANDS&quot;
 .
@@ -268,6 +284,10 @@ Horizontally maximize the focused window on the current monitor, preserving its 
 .TP
 \fBwindow_ver_maximize\fR
 Vertically maximize the focused window on the current monitor, preserving its \fIy\fR component\. Leaves a gap at the top and bottom of the monitor whose width can be configured\. Execute it again after maximizing to revert the state of the window\.
+.
+.TP
+\fBwindow_monocle\fR
+Puts the window in the &quot;monocled&quot; state: full screen but with borders visible\. Monocle mode respects gaps\.
 .
 .TP
 \fBwindow_close\fR
@@ -325,16 +345,8 @@ Unmap all windows that belong to the \fIgroup_nr\fR group\.
 Toggle the \fIgroup_nr\fR group\.
 .
 .TP
-\fBmouse_start\fR \fIMOUSE\fR
-Start tracking the pointer to move/resize the mouse\.
-.
-.TP
-\fBmouse_stop\fR
-Stop tracking the pointer\.
-.
-.TP
-\fBmouse_toggle\fR \fIMOUSE\fR
-If already tracking, stop\. Else, track\.
+\fBgroup_activate_specific\fR \fIgroup_nr\fR
+Activate group \fIgroup_nr\fR and deactivate the rest\.
 .
 .TP
 \fBwm_quit\fR \fIexit_status\fR
@@ -348,8 +360,28 @@ Change the number of maximum groups to \fInumber_of_groups\fR\.
 Windows that belong to a group that has a \fIgroup_nr\fR greater or equal to \fInumber_of_groups\fR will become orphaned\.
 .
 .TP
-\fBwm_config\fR \fIkey\fR [\fIvalue\fR\.\.\.]
+\fBwm_config\fR \fIkey\fR [\fIvalues\fR\.\.\.]
 See \fICONFIGURING\fR\.
+.
+.SH &quot;QUERYING&quot;
+Information about the current state of windowchef is made available through X properties of the root window\. Example:
+.
+.IP &quot;&quot; 4
+.
+.nf
+
+xprop \-root WINDOWCHEF_ACTIVE_GROUPS
+.
+.fi
+.
+.IP &quot;&quot; 0
+.
+.P
+Here is a list of exposed properties:
+.
+.TP
+\fBWINDOWCHEF_ACTIVE_GROUPS\fR
+An integer list of currently active groups\.
 .
 .SH &quot;CONFIGURING&quot;
 Configuring is done using the \fBwm_config\fR command\. Possible configuration keys are:
@@ -360,7 +392,7 @@ Sets the border width to \fIwidth\fR pixels\.
 .
 .TP
 \fBcolor_focused\fR, \fBcolor_unfocused\fR \fIcolor\fR
-Sets the border color to \fIcolor\fR for the focused and unfocused state respectively\. \fIcolor\fR is a hexadecimal value that may or may not start witht he \fB0x\fR prefix\. Example: \fB0x1234ef\fR\.
+Sets the border color to \fIcolor\fR for the focused and unfocused state respectively\. \fIcolor\fR is a hexadecimal value that may or may not start with \fB0x\fR prefix\. Example: \fB0x1234ef\fR\.
 .
 .TP
 \fBgap_width\fR \fIPOSITION\fR \fIwidth\fR
@@ -382,8 +414,16 @@ Sets the number of groups to \fInr\fR\. If \fInr\fR is less than the current num
 \fBenable_sloppy_focus\fR \fIBOOL\fR
 Enable sloppy focus\.
 .
+.TP
+\fBsticky_windows\fR \fIBOOL\fR
+If \fIsticky_windows\fR is true, new windows will be assigned to the last activated group automatically\. Recommended for people who like using workspaces over groups\.
+.
+.TP
+\fBenable_borders\fR \fIBOOL\fR
+If true, border colors will be set each time a window gets/loses focus\. Setting it to false is useful when using another program to draw the borders (example: \fBchwb2\fR from wmutils)\.
+.
 .SH &quot;SEE ALSO&quot;
-windowchef(1), sxhkd(1), wmutils(1), pfw(1), lsw(1)
+windowchef(1), sxhkd(1), wmutils(1), pfw(1), lsw(1), chwb2(1), lemonbar(1)
 .
 .SH &quot;AUTHOR&quot;
 Tudor Roman \fB&lt;tudurom at gmail dot com&gt;\fR
