--- a/git/windowchef/file/types.h.html
+++ b/git/windowchef/file/types.h.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> types.h (1002B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> types.h (1049B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -79,6 +79,8 @@
 <a href="#l61" id="l61">61</a>
 <a href="#l62" id="l62">62</a>
 <a href="#l63" id="l63">63</a>
+<a href="#l64" id="l64">64</a>
+<a href="#l65" id="l65">65</a>
 </pre></td><td><pre>
 /* See the LICENSE file for copyright and license details. */
 
@@ -116,7 +118,7 @@ struct client {
 	xcb_window_t window;
 	struct window_geom geom;
 	struct window_geom orig_geom;
-	bool maxed, hmaxed, vmaxed;
+	bool maxed, hmaxed, vmaxed, monocled;
 	struct list_item *item;
 	struct monitor *monitor;
 	uint16_t min_width, min_height;
@@ -140,6 +142,8 @@ struct conf {
 	enum position cursor_position;
 	uint32_t groups;
 	bool sloppy_focus;
+	bool sticky_windows;
+	bool borders;
 };
 
 #endif
